# PythonAxity

lab01/: README.md  pyproject.toml
lab02/: data.json  main.py  pyproject.toml
lab03/: main.py  pyproject.toml
lab04/: main.py  pyproject.toml
lab04/src/lab_objetos/: entity.py  schemas.py
lab05/: main.py  pyproject.toml
lab05/src/lab_tipado/: entity.py  repo.py  schemas.py
lab06/: main.py  pyproject.toml
lab06/data/: sales.csv
lab07/: main.py  pyproject.toml
lab08/: lab.db  main.py  pyproject.toml
lab08/src/lab_fastapi/: auth.py  db.py  deps.py  models.py  schemas.py
lab08/src/lab_fastapi/routers/: auth.py  orders.py
lab08/tests/: conftest.py  test_auth_and_orders.py
lab09/: alembic.ini  lab.db  main.py  pyproject.toml
lab09/alembic/: env.py
lab09/alembic/versions/: b6d44dc39bfa_create_tables.py
lab09/src/lab_orm/: crud.py  db.py  models.py
lab09/tests/: test_crud.py
lab10/: pyproject.toml  pytest.ini
lab10/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6b970848caf7cae7___init___py.html  z_6b970848caf7cae7_pricing_py.html
lab10/src/lab_tdd/: pricing.py
lab10/tests/: test_pricing_property.py  test_pricing_unit.py
lab11/: main_async.py  main_cpu.py  main_sync.py  pyproject.toml
lab11/src/lab_concurrency/: bench.py
lab12/: main.py  pyproject.toml
lab12/src/lab_solid/: domain.py  ports.py  repos.py  service.py
lab12/tests/: test_lsp.py
lab13/: main.py  pyproject.toml
lab13/src/lab_patterns/: adapter.py  cache_decorator.py  domain.py  provider_external.py  service.py  strategies.py
lab13/tests/: test_patterns.py
lab14/: infer.py  pyproject.toml  train.py
lab14/data/: customers.csv
lab14/models/: buy_classifier.joblib
lab14/tests/: test_infer.py
lab15/: app.py  main.py  pyproject.toml
lab15/src/lab_hex/: domain.py  infra_http_notify.py  infra_memory.py  infra_sqlalchemy.py  ports.py  usecases.py
lab15/tests/: test_contract_repo.py  test_domain.py  test_e2e_fastapi.py
lab16/: Dockerfile  app.py  pyproject.toml
lab16/src/lab_clean/: settings.py
lab16/src/lab_clean/adapters/: presenter.py
lab16/src/lab_clean/application/: handlers.py  ports.py  uow.py  usecases.py
lab16/src/lab_clean/domain/: entities.py  events.py
lab16/src/lab_clean/infra/: repo_memory.py  uow_memory.py
lab16/tests/: test_usecase.py
lab18/: app.py  pyproject.toml
lab18/src/lab_cli/: cli.py  client.py
