[project]
name = "lab-entorno"
version = "0.1.0"
description = ""
authors = [
    {name = "MarcoM3j14",email = "marcomejia2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "lab_entorno", from = "src"}]

# =========================
# Herramientas de calidad
# =========================

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=PEP8, F=errores comunes, I=imports

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
